# agentglass

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY-AUDIT.md  package.json
.github/workflows/: ci.yml  desktop-binaries.yml  pages.yml  release.yml
hooks/: connect_opencode.py  connect_otel.py  gate_event.py  install_hooks.py  opencode-plugin.js  run_py.mjs  seed_demo.py  send_event.py  settings.example.json
landing/: index.html
server/: package.json  tsconfig.json
server/src/: alerts.ts  auth.ts  chat.ts  config.ts  db.ts  docker.ts  embed.d.ts  fsbrowse.ts  gate.ts  git.ts  gitwork.ts  index.ts  ingest.ts  insights.ts  net.ts  otlp.ts  otlp_pb.ts  params.ts  pricing.ts  pty_bridge.py  ratelimit.ts  skills.ts  terminal.ts  transcripts.ts  usage.ts  walkthrough.ts
server/test/: chat-images.test.ts  docker-scope.test.ts  fsbrowse.test.ts  params.test.ts  repo-scan-scope.test.ts  scope-off.test.ts  scope.test.ts  security.test.ts
shared/: types.ts
src-tauri/: Cargo.toml  agentglass.desktop  install-local.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: Alerts.tsx  ChangesModal.tsx  ChatPanel.tsx  CommandPalette.tsx  CommitModal.tsx  CostByModel.tsx  DockerPanel.tsx  EventModal.tsx  Feed.tsx  Fleet.tsx  GitPanel.tsx  Header.tsx  HealthRing.tsx  HelpLegend.tsx  Kpis.tsx  Latency.tsx  Panel.tsx  (+15 more)
web/test/: diff-theme.test.ts
(+15 files in other folders)
