[package]
name = "agentglass"
version = "0.1.0"
description = "Mission Control for AI coding agents"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
